<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Story Time</string>
    <string name="title_section1">South of France</string>
    <string name="title_section2">North of Ibiza</string>
    <string name="title_section3">East of Germany</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Yes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Story Time</string>
    <string name="start_main_text">It\'s time for a story.</string>
    <string name="start_caption_text">tales of places far and wide</string>
    <string name="start_button_text">Tell me a story.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_page">&#8592;</string>
    <string name="next_page">&#8594;</string>
    <string name="goto_page">&#8853;</string>
    <string name="goto_dialog_title">Go To Page</string>
    <string name="goto_dialog_ok">Go!</string>
    <string name="firebase_url">https://shining-torch-306.firebaseio.com/onceupon/</string>

</resources>

