<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atl.layouts.StoryViewerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/general_background">

        <LinearLayout
            android:id="@+id/navbuttons"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn_last_page"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:text="@string/last_page"
                />

            <Button
                android:id="@+id/btn_goto_page"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/goto_page"
                />

            <Button
                android:id="@+id/btn_next_page"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:text="@string/next_page"
                />

        </LinearLayout>


        <TextView android:id="@+id/text_story_viewer" android:layout_width="match_parent" android:layout_height="fill_parent"
            android:layout_margin="7dp"
            android:text="@string/hello_blank_fragment"
            android:lineSpacingExtra="2dp"
            android:scrollbars="vertical" android:layout_below="@id/navbuttons"
            android:textSize="20sp"
            android:typeface="serif"
            />


    </RelativeLayout>

</FrameLayout>
