<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/start_background"
    tools:context="com.atl.layouts.StartActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <TextView android:id="@+id/main_text_content" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/start_text"
        android:textStyle="bold" android:textSize="40sp" android:gravity="center"
        android:text="@string/start_main_text"
        android:paddingBottom="20dp"/>

    <TextView android:id="@+id/caption_text_content" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/start_text"
        android:textSize="25sp" android:gravity="center"
        android:text="@string/start_caption_text" />

    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/start_button" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/start_button_text" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
